# AlNoor

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .ignore  .lfsconfig  .prettierignore  CLA.md  CONTRIBUTING.md  LICENSING.md  README.md  SECURITY.md  VIM for build.txt  biome.json  compose.yaml  devenv.nix  devenv.yaml  go.mod  go.sum  justfile  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.devcontainer/: Caddyfile.dev  Dockerfile  devcontainer.json  docker-compose.yml  livekit.yaml  on-create.sh  process-compose.yml
.github/: pull_request_template.md
config/: config.dev.template.json  config.json.save  config.production.template.json  config.schema.json  config.test.json  livekit.example.yaml  livekit.yaml
dev/: .env.example  Caddyfile.dev  compose.data.yaml  compose.yaml  livekit.template.yaml  main.go  setup.sh
fluxer_admin/: Dockerfile  Dockerfile.dev  gleam.toml  justfile  manifest.toml  package.json  tailwind.css
fluxer_api/: Dockerfile  knip.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.worker.json  vitest.config.ts
fluxer_app/: electron-builder.canary.yaml  electron-builder.yaml  index.html  knip.json  lingui.config.js  package.json  pnpm-lock.yaml  postcss.config.js  rspack.config.mjs  tsconfig.electron.json  tsconfig.json  vitest.config.ts
fluxer_app/crates/libfluxcore/: Cargo.toml
fluxer_app/crates/libfluxcore/src/: animation.rs  apng.rs  gateway.rs  gif.rs  lib.rs  static_image.rs
fluxer_app_proxy/: Dockerfile  package.json  tsconfig.json
fluxer_desktop/: .gitignore  README.md  electron-builder.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
fluxer_docs/: Dockerfile  docs.json  index.mdx  mdx-components.tsx  (+8 more)
fluxer_metrics/: Cargo.toml  Dockerfile
fluxer_metrics/src/: config.rs  main.rs
fluxer_metrics/src/alerts/: discord.rs  mod.rs
fluxer_metrics/src/api/: ingest.rs  mod.rs  query.rs
fluxer_metrics/src/db/: migrations.rs  mod.rs  schemas.rs  storage.rs
fluxer_metrics/src/db/migrations/: 001_initial_schema.sql  002_materialized_views.sql
scripts/cassandra-migrate/: Cargo.toml  Dockerfile
scripts/cassandra-migrate/src/: main.rs  migrate.rs
(+5831 files in other folders)
