[package]
name = "fluxer_metrics"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Metrics collection and time-series storage service for Fluxer"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

# Unique IDs
ulid = { version = "1", features = ["serde"] }

# HTTP client for webhooks
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Hashing
sha2 = "0.10"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment configuration
dotenvy = "0.15"

# ClickHouse client
clickhouse = { version = "0.13", features = ["lz4", "time"] }
