[package]
name = "cassandra-migrate"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
scylla = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
regex = "1.10"
lazy_static = "1.4"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
