[package]
name = "libfluxcore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gif = "0.13"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp", "avif"] }
png = "0.17"
ruzstd = { version = "0.7", default-features = false, features = ["std"] }
wasm-bindgen = { version = "0.2", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
